src/Style.css
:root {
  --primary-color: #dc3806;
  --primary-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
    0 15px 40px rgba(166, 173, 201, 0.2);
  --primary-text-color: #3f4649;
  --font-family: "B612", sans-serif;
  --background-color: #efefef;
}

/* ------- general -------*/

.Logo {
  padding: 0;
  margin: 0;
}

.container {
  background-color: var(--background-color);
}

.Logo > h1 {
  font-family: var(--font-family);
  font-weight: 400;
  color: var(--primary-color);
  padding: 0;
  margin: 0;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

/* ------- general -------*/

/* ------- home -------*/

.home__logo > h1 {
  font-size: 5rem;
}

.home__logo {
  margin-top: 10vh;
  align-self: center;
}

.home__container {
  display: flex;
  top: 0;
  left: 0;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
  position: fixed;
}

.home__container > h2 {
  width: 100vw;
  font-family: var(--font-family);
  font-weight: 400;
  font-size: 2rem;
  align-self: center;
  line-height: 3.5rem;
  margin-bottom: 3rem;
}

.home__button {
  padding: 0;
  margin: 0;
  border: 0;
  background-color: var(--primary-color);
  color: white;
  font-family: var(--font-family);
  font-size: 2rem;
  border-radius: 1rem;
  max-width: 15rem;
  height: 4rem;
  width: 20rem;
  align-self: center;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  margin-bottom: 14rem;
  transition-duration: 0.4s;
}

.home__button:hover {
  background-color: #e35d34;
  cursor: pointer;
}

@media only screen and (max-width: 680px) {
  .home__logo > h1 {
    font-size: 3.5rem;
  }

  .home__container > h2 {
    font-size: 1.7rem;
    line-height: 3rem;
    margin-bottom: 3rem;
    width: 80vw;
  }
  .home__button {
    padding: 0;
    margin: 0;
    border: 0;
    background-color: var(--primary-color);
    color: white;
    font-family: var(--font-family);
    font-size: 1.7rem;
    width: 60vw;
    border-radius: 0.7rem;
    height: 3rem;
    margin-bottom: 30vh;
  }

  .home__button:hover {
    background-color: #e35d34;
  }
}

/* ------- home -------*/

/* ------- user -------*/

.userform__logo-mobile {
  display: none;
}

.userform__line {
  display: none;
}

.userform__container {
  width: 100vw;
  min-height: 100vh;
  position: absolute;
  display: grid;
  grid-template-columns: 2fr 7fr 2fr;
  grid-template-rows: 1fr auto 1fr;
  top: 0;
  left: 0;
  font-family: var(--font-family);
}

.userform__form-container {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  background-color: white;
  border-top: 0.3rem solid var(--primary-color);
  border-radius: 0.625rem;
  box-shadow: var(--primary-shadow);
  padding: 3.425rem 4.125rem 5.5rem;
  width: auto;
  max-width: 40rem;
  min-height: 55vh;
  justify-self: center;
}

.userform__logo-web {
  grid-row: 1 / 2;
  grid-column: 1 / 3;
  margin: 2rem;
  margin-bottom: 0;
  top: 0;
  left: 0;
}

.userform__logo-web > h1 {
  font-size: 2.8rem;
}

.userform__radiobuttons-container {
  grid-column: 1 / 3;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.userform__radio-label {
  font-family: "b612", sans-serif;
  padding: 0.48125rem 6.1875rem 0.48125rem 1.03125rem;
  width: 9.625rem;
  border-radius: 0.3125rem;
  display: flex;
  align-items: center;
  font-size: 1.03125rem;
  cursor: pointer;
  background-color: #f7f7f7;
}

.userform__radio-label:before {
  content: "";
  height: 1.03125rem;
  width: 1.03125rem;
  border: 0.0625rem solid #818181;
  border-radius: 50%;
  margin-right: 1.03125rem;
}

input[type="radio"]:checked + label:before {
  content: "";
  background-color: white;
  height: 0.48125rem;
  width: 0.48125rem;
  border: 0.34375rem solid var(--primary-color);
  border-radius: 50%;
  margin-right: 1.03125rem;
}

.userform__g3,
.userform__g5,
.userform__g7,
.userform__g9,
.userform__g11 {
  grid-column: 1 / 2;
  justify-self: flex-start;
}

.userform__g4,
.userform__g6,
.userform__g8,
.userform__g10,
.userform__g12 {
  grid-column: 2 / 3;
  justify-self: flex-end;
}

.userform__g1 {
  grid-row: 1 / 2;
}
.userform__g2 {
  grid-row: 2 / 3;
}

.userform__g3,
.userform__g4 {
  grid-row: 3 / 4;
}

.userform__g5,
.userform__g6 {
  grid-row: 4 / 5;
}

.userform__g7,
.userform__g8 {
  grid-row: 5 / 6;
}

.userform__g9,
.userform__g10 {
  grid-row: 7 / 8;
}

.userform__g11,
.userform__g12 {
  grid-row: 9 / 10;
}

.userform__g13 {
  grid-row: 11 / 12;
}
/*  title  */

.userform__title-container {
  grid-column: 1 / 3;
  justify-self: center;
}

.userform__title-container > h2 {
  font-family: var(--font-family);
  color: var(--primary-text-color);
  font-weight: 400;
  padding: 0;
  margin: 0;
  font-size: 2rem;
  padding-bottom: 1.875rem;
}

/*  task text  */

.userform__description {
  padding: 0;
  margin: 0;
  font-weight: 400;
  margin-top: 2.0625rem;
  font-family: var(--font-nameamily);
  font-size: 1.05rem;
  line-height: 1.76rem;
  text-align: justify;
}

.userform__text-input {
  width: 9.5rem;
  padding: 0 0.55rem;
  border: 0.03125rem solid #b1b4b6;
  margin-top: 2.0625rem;
  border-radius: 0.3125rem;
  height: 2.5rem;
  background-color: #f7f7f7;
  font-size: 1rem;
}

.userform__text-input:focus {
  outline: none !important;
  border: 0.03125rem solid var(--primary-color);
  border-radius: 0.3125rem;
}

/*  button  */
.userform__button {
  margin-top: 2.0625rem;
  width: 36.3rem;
  height: 4rem;
  font-size: 1.375rem;
  border: 0.20625rem solid var(--primary-color);
  color: var(--primary-color);
  font-family: var(--font-family);
  border-radius: 0.3125rem;
  background-color: white;
  cursor: pointer;
  font-weight: 700;
  grid-column: 1 / 3;
  justify-self: center;
}

.userform__button:hover {
  color: white;
  background-color: var(--primary-color);
}

.userform__button:hover:disabled {
  background-color: #e35d34;
  border-color: #e35d34;
  cursor: not-allowed;
}
/* ... */

